src/test/success/arithmetic_expressions.egern
print(2 + 3)
print(3 - 2)
print(3 * 4)
print(4 / 2)
print(13 % 5)

print(2 + 3 * 5)
print(7 - 4 - 2)
print(8 / 4 * 2)
print(9 - 6 / 3)
