src/test/fail/arithmetic_operations_on_arrays_fail.egern
print([1, 2] + [3, 4])
print([5, 6] - [3, 2])
print([8, 9] * [2, 3])
print([0, 2] / [4, 5])
print([3, 4] % [2, 3])
print(-[4, 6])

print([4, 5] + 2)
print([2, 8] - 1)
print([4, 2] * 6)
print([7, 3] / 4)
print([9, 5] % 3)
